# Lens

./: .gitignore  CLAUDE.md  QUERY_LATENCY_REPORT.md  README.md  config.yaml  deploy.sh  ecfr_reader.py  fetch_titles.py  profile_queries.py  pyproject.toml  requirements.txt  test_ecfr_verification.py
cfr_viewer/: TESTING.md
cfr_viewer/src/cfr_viewer/: __init__.py  __main__.py  app.py  routes_agencies.py  routes_api.py  routes_browse.py  routes_chart.py  routes_compare.py  routes_rankings.py  routes_statistics.py  services.py
cfr_viewer/src/cfr_viewer/static/css/: print.css  theme.css
cfr_viewer/src/cfr_viewer/static/js/: sortable.js  ui-enhancements.js
cfr_viewer/src/cfr_viewer/templates/: base.html
cfr_viewer/src/cfr_viewer/templates/agencies/: detail.html  index.html
cfr_viewer/src/cfr_viewer/templates/browse/: index.html  section.html  structure.html  title.html  titles.html
cfr_viewer/src/cfr_viewer/templates/chart/: index.html
cfr_viewer/src/cfr_viewer/templates/compare/: diff.html  index.html  macros.html  sections.html
cfr_viewer/src/cfr_viewer/templates/components/: agencies_table.html  change_cell.html  citation_input.html  header_tooltip.html  section_content.html  similar_sections.html  structure_table.html  table_filter.html  titles_table.html  year_selector.html
cfr_viewer/src/cfr_viewer/templates/errors/: 404.html
cfr_viewer/src/cfr_viewer/templates/rankings/: agencies.html  agency_detail.html  index.html  titles.html
cfr_viewer/src/cfr_viewer/templates/statistics/: agencies.html  agency_detail.html  index.html  titles.html
cfr_viewer/tests/: conftest.py  test_routes.py  test_user_stories.py
docs/: api-review-versioner-full-xml.md
ecfr/: __init__.py  client.py  config.py  config.yaml  constants.py  converter.py  database.py  extractor.py  fetcher.py  reader.py
ecfr/tests/: test_client.py  test_constants.py  test_database.py  test_ecfr_verification.py  test_extractor.py  test_fetcher.py  test_fetcher_integration.py  test_similarity_computation.py
relevance/: .gitignore  README.md  pyproject.toml
relevance/config/: example.env
relevance/scripts/: run_live_batches.py
relevance/src/relevance/: __init__.py  adapters_base.py  adapters_dol.py  adapters_epa.py  adapters_registry.py  adapters_sec.py  api_app.py  application_aggregation.py  application_bootstrap.py  application_citation_extractor.py  application_counts.py  application_dates.py  application_fetcher.py  application_ingestion.py  application_query.py  builder.py  cli_main.py  domain_models.py  infrastructure_config.py  infrastructure_db.py  infrastructure_fixture_fetcher.py  infrastructure_http_fetcher.py  infrastructure_logging.py  infrastructure_migrations.py  infrastructure_orm.py  infrastructure_repositories.py  interface_wiring.py
relevance/src/relevance/adapters/: base.py  dol.py  epa.py  registry.py  sec.py
relevance/src/relevance/api/: app.py
relevance/src/relevance/application/: aggregation.py  bootstrap.py  citation_extractor.py  fetcher.py  ingestion.py  query.py
relevance/src/relevance/cli/: main.py
relevance/src/relevance/domain/: __init__.py
relevance/src/relevance/infrastructure/: db.py  fixture_fetcher.py  http_fetcher.py  migrations.py  repositories.py
relevance/src/relevance/interface/: wiring.py
relevance/tests/: conftest.py  test_adapters.py  test_citation_extractor.py  test_cli.py  test_integration_offline.py
relevance/tests/fixtures/dol/: doc_1.html  doc_2.html  doc_3.html  index.html
relevance/tests/fixtures/epa/: doc_1.html  doc_2.html  doc_3.html  index.html
relevance/tests/fixtures/sec/: doc_1.html  doc_2.html  doc_3.html  index.html
relevance_legal/: pacer_async_extract.py
screenshots/: home_html.txt  section_html.txt  structure_html.txt
tests/: test_client.py  test_constants.py  test_converter.py  test_database.py  test_extractor.py  test_fetcher.py  test_fetcher_integration.py  test_reader.py  test_similarity_computation.py
