[project]
name = "ecfr"
version = "0.1.0"
description = "eCFR tooling with enforcement relevance analysis"
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
  "requests>=2.28.0",
  "lxml>=4.9.0",
  "playwright>=1.40.0",
  "flask>=3.0",
  "aiohttp>=3.9.0",
  "scikit-learn>=1.3.0",
  "pyyaml>=6.0",
  "faiss-cpu>=1.7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-asyncio>=0.23",
  "pytest-cov>=4.1",
  "pytest-playwright>=0.4.0",
]

[project.scripts]
cfr-viewer = "cfr_viewer:main"

[tool.pytest.ini_options]
testpaths = ["ecfr/tests", "cfr_viewer/tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []
packages = ["ecfr", "cfr_viewer"]

[tool.setuptools.package-dir]
ecfr = "ecfr"
cfr_viewer = "cfr_viewer/src/cfr_viewer"

[tool.setuptools.package-data]
cfr_viewer = ["templates/**/*", "static/**/*"]
