[project]
name = "relevance"
version = "0.1.0"
description = "CFR enforcement citation analysis"
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
  "SQLAlchemy>=2.0",
  "alembic>=1.13",
  "pydantic>=2.5",
  "pydantic-settings>=2.1",
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "typer>=0.12",
  "httpx>=0.26",
  "beautifulsoup4>=4.12",
  "lxml>=5.1",
  "tenacity>=8.2",
  "python-dateutil>=2.9",
  "orjson>=3.9",
  "rich>=13.7"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-asyncio>=0.23",
  "pytest-cov>=4.1",
]

[project.scripts]
relevance = "relevance.cli.main:app"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
